collada files won't open in some apps because <polylist> is used instead of <triangles> #51622

Closed
opened 2017-05-25 10:31:59 +02:00 by mathieu menuet · 8 comments

System Information
all

Blender Version
Broken: all

Short description of error
Collada files exported from Blender won't load in Google earth for example

Exact steps for others to reproduce the error
export the default cube to collada and try to add it to google earth, it will fail.

**System Information** all **Blender Version** Broken: all **Short description of error** Collada files exported from Blender won't load in Google earth for example **Exact steps for others to reproduce the error** export the default cube to collada and try to add it to google earth, it will fail.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Gaia Clary was assigned by mathieu menuet 2017-05-25 10:32:37 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@GaiaClary, is that considered a bug from our side? We already have Triangulate option, not sure it's supposed to give <polylist> or <triangles> tho.. Your call here!

@GaiaClary, is that considered a bug from our side? We already have Triangulate option, not sure it's supposed to give `<polylist>` or `<triangles>` tho.. Your call here!
Member

Right now all meshes are exported as polygons, even when triangulated. This is not a bug (as far as i can say) but i think it is more elegant to export triangulated meshes as . So i will look at this as well :)

Right now all meshes are exported as polygons, even when triangulated. This is not a bug (as far as i can say) but i think it is more elegant to export triangulated meshes as <triangles>. So i will look at this as well :)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @John-44

Added subscriber: @John-44
Member

The Collada exporter now exports mesh geometries as when the geometry only contains tris (or is triangulated during export).
@John-44 Peterson: Thanks for reporting this issue. Please can you check if the fix works for you now?

thanks,
Gaia

The Collada exporter now exports mesh geometries as <triangles> when the geometry only contains tris (or is triangulated during export). @John-44 Peterson: Thanks for reporting this issue. Please can you check if the fix works for you now? thanks, Gaia
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51622
No description provided.