fix: T51622 The exporter now exports meshes as <Triangles> when all contained polygons are tris